--- a/front_end/analyzer/package.json
+++ b/front_end/analyzer/package.json
@@ -11,9 +11,15 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/vue-fontawesome": "^0.1.6",
+    "buefy": "^0.7.10",
     "bulma": "^0.7.5",
+    "bulma-calendar": "^6.0.7",
+    "bulma-extensions": "^6.2.7",
+    "bulma-switch": "^2.0.0",
     "core-js": "^2.6.5",
     "favicon": "0.0.2",
+    "highcharts": "^7.1.2",
+    "highcharts-vue": "^1.3.5",
     "vue": "^2.6.10",
     "vue-router": "^3.0.7",
     "vue-routing": "0.0.1",
