--- a/front_end/analyzer/package.json
+++ b/front_end/analyzer/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@creativebulma/bulma-collapsible": "^1.0.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/vue-fontawesome": "^0.1.6",
+    "axios": "^0.19.0",
     "buefy": "^0.7.10",
     "bulma": "^0.7.5",
     "bulma-calendar": "^6.0.7",
@@ -21,6 +23,7 @@
     "highcharts": "^7.1.2",
     "highcharts-vue": "^1.3.5",
     "vue": "^2.6.10",
+    "vue-json-excel": "^0.2.98",
     "vue-router": "^3.0.7",
     "vue-routing": "0.0.1",
     "vuex": "^3.1.1"
